# axum-py-poc

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/db/: redis.rs
src/handler/: eval.rs  index.rs  mod.rs  user.rs
src/model/: prop.rs
src/repository/: prop.rs
src/service/: eval.rs
